--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,7 @@ channels:
   - pytorch
   - nvidia
   - conda-forge
+  - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_kmp_llvm
@@ -10,8 +11,8 @@ dependencies:
   - blas-devel=3.9.0=16_linux64_mkl
   - brotli-python=1.1.0=py38h17151c0_1
   - bzip2=1.0.8=hd590300_5
-  - ca-certificates=2024.2.2=hbcca054_0
-  - certifi=2024.2.2=pyhd8ed1ab_0
+  - ca-certificates=2024.3.11=h06a4308_0
+  - certifi=2024.2.2=py38h06a4308_0
   - charset-normalizer=3.3.2=pyhd8ed1ab_0
   - cuda-cudart=12.1.105=0
   - cuda-cupti=12.1.105=0
@@ -20,6 +21,7 @@ dependencies:
   - cuda-nvtx=12.1.105=0
   - cuda-opencl=12.4.99=0
   - cuda-runtime=12.1.0=0
+  - cycler=0.11.0=pyhd3eb1b0_0
   - ffmpeg=4.3=hf484d3e_0
   - filelock=3.13.3=pyhd8ed1ab_0
   - freetype=2.12.1=h267a509_2
@@ -30,6 +32,7 @@ dependencies:
   - idna=3.6=pyhd8ed1ab_0
   - jinja2=3.1.3=pyhd8ed1ab_0
   - jpeg=9e=h166bdaf_2
+  - kiwisolver=1.4.4=py38h6a678d5_0
   - lame=3.100=h166bdaf_1003
   - lcms2=2.15=hfd0df8a_0
   - ld_impl_linux-64=2.40=h41732ed_0
@@ -69,6 +72,8 @@ dependencies:
   - libzlib=1.2.13=hd590300_5
   - llvm-openmp=15.0.7=h0cdce71_0
   - markupsafe=2.1.5=py38h01eb140_0
+  - matplotlib=3.3.2=0
+  - matplotlib-base=3.3.2=py38h817c723_0
   - mkl=2022.1.0=h84fe81f_915
   - mkl-devel=2022.1.0=ha770c72_916
   - mkl-include=2022.1.0=h84fe81f_915
@@ -85,6 +90,7 @@ dependencies:
   - pillow=9.4.0=py38hde6dc18_1
   - pip=24.0=pyhd8ed1ab_0
   - pthread-stubs=0.4=h36c2ea0_1001
+  - pyparsing=3.0.9=py38h06a4308_0
   - pysocks=1.7.1=pyha2e5f31_6
   - python=3.8.19=hd12c33a_0_cpython
   - python_abi=3.8=4_cp38
@@ -95,12 +101,14 @@ dependencies:
   - readline=8.2=h8228510_1
   - requests=2.31.0=pyhd8ed1ab_0
   - setuptools=69.2.0=pyhd8ed1ab_0
+  - six=1.16.0=pyhd3eb1b0_1
   - sympy=1.12=pypyh9d50eac_103
   - tbb=2021.11.0=h00ab1b0_1
   - tk=8.6.13=noxft_h4845f30_101
   - torchaudio=2.1.2=py38_cu121
   - torchtriton=2.1.0=py38
   - torchvision=0.16.2=py38_cu121
+  - tornado=6.3.3=py38h5eee18b_0
   - typing_extensions=4.10.0=pyha770c72_0
   - urllib3=2.2.1=pyhd8ed1ab_0
   - wheel=0.43.0=pyhd8ed1ab_0
@@ -128,7 +136,6 @@ dependencies:
       - pyarrow-hotfix==0.6
       - python-dateutil==2.9.0.post0
       - pytz==2024.1
-      - six==1.16.0
       - tqdm==4.66.2
       - tzdata==2024.1
       - xxhash==3.4.1
